completed js factor

--- a/stylesheets/master.css
+++ b/stylesheets/master.css
@@ -76,3 +76,26 @@ body {
   -ms-font-feature-settings: "lnum";
   -webkit-font-feature-settings: "lnum";
   font-feature-settings: "lnum"; }
+
+body{
+  font-family: sans-serif;
+  margin: 25px;
+}
+
+h1{
+  font-size: 2em;
+  font-weight: 700;
+}
+
+h2{
+  font-size: 1.5em;
+  font-style: italic;
+}
+
+p{
+  font-size: 1.25;
+  font-weight: 700;
+  background-color: #BBB;
+  padding: 25px;
+
+}
